# marauder-cpp11

./: .gitignore  CMakeLists.txt  Makefile  bool.h  camera.c  camera.h  confCore.json  confUI.json  core.c  core_math.c  core_private.h  dir.c  dir.h  event.c  event_end_turn.c  event_move.c  event_move.h  game.c  game.h  game_private.h  gl.c  gl.h  line2f.c  line2f.h  list.c  list.h  los.c  map.json  math.c  math.h  misc.c  misc.h  obj.c  obj.h  path.c  path.h  readme.md  scenario.json  ui_event.c  ui_event.h  (+13 more)
core/: command.cpp  command.hpp  core.c  core.cpp  core.h  core.hpp  core_private.h  dir.c  dir.cpp  dir.h  dir.hpp  direction.cpp  direction.hpp  event.c  event.cpp  event.h  event.hpp  eventManager.cpp  eventManager.hpp  eventView.cpp  eventView.hpp  jsonHelpers.cpp  jsonHelpers.hpp  lineOfSight.cpp  lineOfSight.hpp  list.c  list.h  los.c  los.cpp  los.h  los.hpp  map.cpp  map.h  map.hpp  math.c  math.cpp  math.h  math.hpp  misc.c  misc.cpp  (+26 more)
core/command/: commandAttack.cpp  commandAttack.hpp  commandEndTurn.cpp  commandEndTurn.hpp  commandMove.cpp  commandMove.hpp
core/event/: end_turn.c  end_turn.cpp  end_turn.h  end_turn.hpp  eventAttack.cpp  eventAttack.hpp  eventEndTurn.cpp  eventEndTurn.hpp  eventMove.cpp  eventMove.hpp  move.c  move.cpp  move.h  move.hpp
tests/: runner.cpp  testCoreDir.cpp  testCoreLineOfSight.cpp  testCoreLos.cpp
ui/: camera.cpp  camera.hpp  color.cpp  color.hpp  config.hpp  event.cpp  event.hpp  eventVisualizer.cpp  eventVisualizer.hpp  game.cpp  game.hpp  gl.cpp  gl.hpp  main.cpp  math.cpp  math.hpp  obj.cpp  obj.hpp  objModel.cpp  objModel.hpp  sceneManager.cpp  sceneManager.hpp  sceneNode.cpp  sceneNode.hpp  v2f.cpp  v2f.hpp  v3f.cpp  v3f.hpp  vertexArray.cpp  vertexArray.hpp  vertex_array.cpp  vertex_array.hpp  widgets.cpp  widgets.hpp
ui/event/: end_turn.cpp  end_turn.hpp  eventAttackVisualizer.cpp  eventAttackVisualizer.hpp  eventEndTurnVisualizer.cpp  eventEndTurnVisualizer.hpp  eventMoveVisualizer.cpp  eventMoveVisualizer.hpp  move.cpp  move.hpp
ui_opengl/: camera.c  camera.cpp  camera.h  camera.hpp  config.h  event.c  event.cpp  event.h  event.hpp  game.c  game.cpp  game.h  game.hpp  game_private.h  gl.c  gl.cpp  gl.h  main.cpp  math.c  math.cpp  math.h  math.hpp  obj.c  obj.cpp  obj.h  obj.hpp  v2f.cpp  v2f.h  v3f.cpp  v3f.h  v3f.hpp  va.c  va.h  vertex_array.cpp  vertex_array.h  vertex_array.hpp  widgets.c  widgets.cpp  widgets.h  widgets.hpp
ui_opengl/event/: move.c  move.cpp  move.h
util/: regen_makefile.pl
visualizer/: camera.cpp  camera.hpp  color.cpp  color.hpp  color3u.cpp  color3u.hpp  color4f.cpp  color4f.hpp  eventVisualizer.cpp  eventVisualizer.hpp  game.cpp  game.hpp  gl.cpp  gl.hpp  main.cpp  math.cpp  math.hpp  mesh.cpp  mesh.hpp  meshBuilders.cpp  meshBuilders.hpp  objModel.cpp  objModel.hpp  sceneManager.cpp  sceneManager.hpp  sceneNode.cpp  sceneNode.hpp  texture.cpp  texture.hpp  tilePicker.cpp  tilePicker.hpp  v2f.cpp  v2f.hpp  v3f.cpp  v3f.hpp  vertexArray.cpp  vertexArray.hpp  visualizer.cpp  visualizer.hpp
visualizer/event/: eventAttackVisualizer.cpp  eventAttackVisualizer.hpp  eventEndTurnVisualizer.cpp  eventEndTurnVisualizer.hpp  eventMoveVisualizer.cpp  eventMoveVisualizer.hpp
